<resources>
    <string name="app_name">Push Notes</string>
    <string name="note_title"><font size="10">Titolo</font></string>
    <string name="note_content"><font size="10">Contenuto</font></string>
    <string name="persistent_notification">Notifica persistente</string>
    <string name="autodelete">Elimina automaticamente la notifica</string>
    <string name="hide">Nascondi da schermata di blocco</string>
    <string name="alertdialog_title">Inserisci ore e minuti</string>
    <string name="hour"><font size="15">Ore</font></string>
    <string name="minute"><font size="15">Minuti</font></string>
    <string name="send_alertDialog">Invia</string>
    <string name="cancel_alertDialog">Annulla</string>
    <string name="delete_question">"Eliminare tutte le note dalle notifiche?"</string>
    <string name="delete_iconAdvise">Potrai sempre consultarle dall\'apposita icona</string>
    <string name="yes">Si</string>
    <string name="no" translatable="false">No</string>
    <string name="developer" translatable="false">Developer</string>
    <string name="nameDeveloper" translatable="false">Giovanni Ferraro</string>
    <string name="openSource" translatable="false">Open Source</string>
    <string name="gitHub" translatable="false">GitHub</string>
    <string name="version_not_supported">La tua versione Android non supporta questa funzione</string>
    <string name="howto_delete">Clicca per eliminare</string>
    <string name="no_title">Nota senza titolo</string>
    <string name="no_content">Nota senza contenuto</string>
    <string name="no_title_content">Impostare titolo e/o contenuto</string>
    <string name="update_avaible">Nuovo aggiornamento disponibile</string>
    <string name="update_download">Effettuare il download?</string>
    <string name="notes"><font size="17">Note</font></string>
    <string name="deleteNotes">Elimina tutto</string>
    <string name="noNotes">Nessuna nota</string>
    <string name="close">Chiudi</string>
    <string name="listIconDescription" translatable="false">List icon</string>
    <string name="clipboardNote">Nota copiata negli appunti</string>
    <string name="dontSave">Non salvare nella lista</string>
    <string name="copyToClipboard">Copia la nota negli appunti</string>
    <string name="downloadPath">Il download verrà salvato nella cartella \"Download\" del tuo dispositivo</string>
    <string name="setTime">Imposta orario</string>
    <string name="noPermissionAlertTitle">Permessi mancanti</string>
    <string name="noPermissionAlert">Push Notes può scaricare il nuovo aggiornamento, ma c\'è bisogno dell\'autorizzazione per scrivere nella memoria interna. Concedere l\'autorizzazione?</string>
    <string name="invalidTime">Impostare un orario successivo a quello attuale</string>
    <string name="limitationsTitle">Limitazioni</string>
    <string name="limitationsContent">La tua versione Android non supporta la funzione di auto-eliminazione delle notifiche per via di alcuni limiti software</string>
    <string name="willBeDeletedIn">La notifica verrà eliminata</string>
    <string name="inString">tra</string>
    <string name="hours">ore</string>
    <string name="and">e</string>
    <string name="minutes">minuti</string>
    <string name="at">alle</string>
    <string name="willNotBeDeleted">La notifica non verrà eliminata automaticamente in quanto non sono state inserite ore e/o minuti</string>
    <string name="fullDeleted">Note eliminate</string>

    <string name="hideLockScreen">Nascondi dalla schermata di blocco</string>
    <string name="quickNote">Note rapide</string>
    <string name="deleteFromNotification">Note eliminate dalle notifiche</string>

    <string name="resend">Rimanda</string>
    <string name="copy">Copia</string>
    <string name="delete">Elimina</string>

    <string name="note_deleted">Nota eliminata</string>

    <string name="dev_info">Sviluppatore - Giovanni Ferraro</string>
    <string name="logo_info">Logo e aiuto UI - AleD219</string>
    <string name="ps_info" translatable="false">Push Notes - OpenSource</string>
    <string name="support">Supporta</string>

    <string name="reply_title">Crea nota rapida</string>
    <string name="add">Crea</string>
    <string name="quick_note">Nota rapida</string>
    <string name="click_on_add">Clicca su \"Crea\" per creare una nota</string>

    <string name="theme">Tema</string>
    <string name="light_theme">Tema chiaro</string>
    <string name="dark_theme">Tema scuro</string>
    <string name="follow_system">Tema di sistema</string>
    <string name="application_info">Info e impostazioni</string>
    <string name="notification_settings">Impostazioni notifiche</string>

</resources>
