<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:id="@+id/sheetLayout"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <GridLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:clickable="true"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/listIconDescription"
                app:srcCompat="@drawable/ic_limitation_icon"
                android:id="@+id/settingsImageView"/>
        <TextView
                android:text="@string/limitationsTitle"
                android:fontFamily="@font/product_sans_bold"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </GridLayout>
    <TextView
            android:text="@string/limitationsContent"
            android:fontFamily="@font/product_sans_regular"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:text="@string/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/product_sans_bold"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:paddingBottom="40dp"
            android:textColor="#b30000"
            android:textSize="15sp"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/closeSheetAdvise"/>
</LinearLayout>