<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:theme="@style/AppThemeLight"
        android:id="@+id/autocancel_root"
        android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/hour_editText"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/hour"
                android:backgroundTint="#d37a7a"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:backgroundTint="#3399FF"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/minute_editText"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="#d37a7a"
                android:hint="@string/minute"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>
        <TextView android:text="@string/setTime"
                android:textSize="17sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:drawableStart="@drawable/ic_clock"
                android:layout_marginStart="20dp"
                android:drawablePadding="15dp"
                android:layout_marginTop="23dp"
                android:id="@+id/set_time_textView"
                android:textColor="#212121"/>
</androidx.appcompat.widget.LinearLayoutCompat>