<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/bottom_sheet_container">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
        <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="6dp"
                android:layout_gravity="center"
                app:cardCornerRadius="2pt"
                android:backgroundTint="#3d3d5c"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#3d3d5c"
            android:layout_marginTop="240dp"/>
    <GridLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:columnCount="2"
            android:layout_marginTop="25dp"
            android:id="@+id/settingsGridLayout">
        <TextView android:text="@string/persistent_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
                android:textSize="16sp"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="25dp"
                android:track="@drawable/switch_track"
                android:thumb="@drawable/switch_thumb"
                android:checked="true"
                android:id="@+id/persistent_notfication_switch"/>

        <TextView android:text="@string/autodelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:textSize="15.5sp"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:thumb="@drawable/switch_thumb"
                android:track="@drawable/switch_track"
                android:id="@+id/autodelete_notification_switch"/>

        <TextView android:text="@string/dontSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="15dp"
                android:textSize="16sp"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="25dp"
                android:thumb="@drawable/switch_thumb"
                android:track="@drawable/switch_track"
                android:id="@+id/dont_save_switch"/>

        <TextView android:text="@string/copyToClipboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="15dp"
                android:textSize="16sp"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:thumb="@drawable/switch_thumb"
                android:track="@drawable/switch_track"
                android:id="@+id/copy_to_clipboard_switch"/>
    </GridLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:orientation="vertical">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
                android:columnCount="3">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/dmsans_medium"
                android:textSize="15.5sp"
                android:text="@string/dev_info"
                android:layout_columnSpan="1"
                android:id="@+id/dev_info_textView"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_telegram"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:id="@+id/dev_telegram_imageView"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_github"
                android:layout_marginEnd="15dp"
                android:id="@+id/dev_github_imageView"/>
    </GridLayout>
        <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/logo_info"
                    android:textSize="15.5sp"
                    android:id="@+id/logo_info_textView"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_telegram"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/ui_telegram_imageView"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_github"
                    android:layout_marginEnd="15dp"
                    android:id="@+id/ui_github_imageView"/>
        </GridLayout>
        <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:paddingBottom="40dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/ps_info"
                    android:textSize="15.5sp"
                    android:id="@+id/push_notes_info_textView"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_github"
                    android:layout_marginEnd="15dp"
                    android:layout_gravity="end"
                    android:id="@+id/push_notes_github_imageView"/>
        </GridLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>