<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="#202030"
        android:orientation="vertical"
        android:theme="@style/AppTheme"
        android:id="@+id/autocancel_root"
        android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/hour_editText"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/hour"
                android:fontFamily="@font/google_sans_medium"
                android:textColor="#E0E0E0"
                android:backgroundTint="#d37a7a"
                android:layout_height="wrap_content"
                android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:backgroundTint="#3399FF"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/minute_editText"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="#d37a7a"
                android:hint="@string/minute"
                android:fontFamily="@font/google_sans_medium"
                android:textColor="#E0E0E0"
                android:layout_height="wrap_content"
                android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>
    <GridLayout android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/setTimeLayout"
                android:columnCount="2">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_clock_icon"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:id="@+id/setTimeImageView"/>
        <TextView android:text="@string/setTime"
                  android:textSize="17sp"
                  android:fontFamily="@font/google_sans_bold"
                  android:textColor="#e0e0e0"
                  android:layout_marginStart="10dp"
                  android:layout_marginTop="23dp"/>
    </GridLayout>
</androidx.appcompat.widget.LinearLayoutCompat>